added delete, fixed some routing stuff

--- a/CMSprinkle/Views/Sprinkle/Add.cshtml
+++ b/CMSprinkle/Views/Sprinkle/Add.cshtml
@@ -3,7 +3,7 @@
 
 <h1>CMSprinkle Add Content</h1>
 
-<p><a href="/cmsprinkle/home">⬅ Back</a></p>
+@Html.ActionLink("⬅ Back","Home","Sprinkle")
 
 @if (!ViewData.ModelState.IsValid)
 {
