--- a/CMSprinkle/Views/Sprinkle/Home.cshtml
+++ b/CMSprinkle/Views/Sprinkle/Home.cshtml
@@ -4,7 +4,9 @@
 
 <h1>CMSprinkle Home Page</h1>
 
-<p><a href="/cmsprinkle/add">Add New Content</a></p>
+<p>
+    @Html.ActionLink("Add New Content", "Add", "Sprinkle")
+</p>
 
 <table border="1">
     <thead>
@@ -24,8 +26,11 @@
         {
             <tr>
                 <td>@item.Key</td>
-                    <td>@item.Value.ToTruncateMarkdown(50)</td>
-                <td><a href="/cmsprinkle/edit/@item.Key">[Edit]</a></td>
+                <td>@item.Value.ToTruncateMarkdown(50)</td>
+                <td>
+                    @Html.ActionLink("[Edit]", "Edit", "Sprinkle", new { contentKey = item.Key })
+                    @Html.ActionLink("[Delete]", "Delete", "Sprinkle", new { contentKey = item.Key }, new { onclick = "return confirm('Are you sure you want to delete?');" })
+                </td>
             </tr>
         }
         </tbody>
