--- a/CMSprinkle/Views/Sprinkle/Home.cshtml
+++ b/CMSprinkle/Views/Sprinkle/Home.cshtml
@@ -2,10 +2,10 @@
 @using CMSprinkle
 @model CMSprinkle.ViewModels.CMSprinkleHome
 
-<h1>CMSprinkle Home Page</h1>
+<h1>CMSprinkle</h1>
 
 <p>
-    @Html.ActionLink("Add New Content", "Add", "Sprinkle")
+    @Html.ActionLink("➕ Add New Content", "Add", "Sprinkle")
 </p>
 
 <table border="1">
