--- a/CMSprinkle/Views/Sprinkle/Add.cshtml
+++ b/CMSprinkle/Views/Sprinkle/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@{ Layout = "_SprinkleLayout";}
 @model CMSprinkle.ViewModels.AddContentSubmitModel
 
-<h1>CMSprinkle Add Content</h1>
+<h1>Add Content</h1>
 
 @Html.ActionLink("⬅ Back","Home","Sprinkle")
 
@@ -11,8 +11,8 @@
 }
 
 <form method="post">
-    <p>Key: <input type="text" name="key" value="@Model.Key" maxlength="90" /></p>
-    <p>Content: <textarea rows="20" width="75%" name="content" id="content" maxlength="10000000">@Model.Content</textarea></p>
+    <p>Key: <input type="text" name="key" value="@Model.Key" maxlength="90" placeholder="Unique Identifier" /></p>
+    <p>Content: <textarea rows="5" name="content" id="content" maxlength="10000000" placeholder="Markdown: Click to edit">@Model.Content</textarea></p>
     <input type="submit" value="Add" />
 </form>
 
