--- a/CMSprinkle/Views/Sprinkle/Edit.cshtml
+++ b/CMSprinkle/Views/Sprinkle/Edit.cshtml
@@ -6,9 +6,17 @@
 @Html.ActionLink("⬅ Back", "Home", "Sprinkle")
 
 <form method="post">
-    <p>Key: <input type="text" name="key" value="@Model.Key" readonly /></p>
-    <p>Content: <textarea rows="20" name="content" id="content">@Model.Content</textarea></p>
-    <input type="submit" value="Update" />
+    <div class="form-group">
+        <label for="key">Key:</label>
+        <input type="text" id="key" name="key" value="@Model.Key" readonly />
+    </div>
+
+    <div class="form-group">
+        <label for="content">Content:</label>
+        <textarea rows="5" id="content" name="content">@Model.Content</textarea>
+    </div>
+
+    <input type="submit" value="Update" class="submit-button" />
 </form>
 
 @section scripts {
