started on unit tests and some reorg/cleanup driven by that

--- a/CMSprinkle/Views/Sprinkle/Home.cshtml
+++ b/CMSprinkle/Views/Sprinkle/Home.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ Layout = "_SprinkleLayout";}
-@using CMSprinkle
+@using CMSprinkle.Infrastructure
 @model CMSprinkle.ViewModels.CMSprinkleHome
 
 <h1>CMSprinkle</h1>
