unit test for tag helper

--- a/CMSprinkle.Example/Views/Home/Index.cshtml
+++ b/CMSprinkle.Example/Views/Home/Index.cshtml
@@ -8,6 +8,6 @@
     
     @* this is how you sprinkle managed content into your pages *@
     @* make sure you add CMSPrinkle in _ViewImports.cshtml first *@
-    @* this will says "ERROR: Content Not Found (HelloWorld)" until you actually create the content.*@
+    @* this will say "ERROR: Content Not Found (HelloWorld)" until you actually create the content.*@
     <CMSprinkle contentKey="HelloWorld" />
 </div>
